--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<div class="store-info-container">
 					<span><i class="fas fa-phone"></i>(11) 94441-1654</span>
 					<span><i class="fas fa-envelope"></i> dcordeiro962@gmail.com</span>
-					<span><i class="fas fa-map-marker-alt"></i>Address the store</span>
+					<span><i class="fas fa-map-marker-alt"></i>Address test, 1298</span>
 				</div>
 
 				<div class="header-user-top-menu">
@@ -44,7 +44,7 @@
 
 		<div class="main-header">
 			<div class="main-header-container">
-				<a href="#">Ligh
+				<a href="#" id="brand">Ligh
 					<i class="fas fa-bolt"></i>
 				</a>
 
@@ -60,7 +60,7 @@
 						<a href="#">Favorite</a>
 					</div>
 					<div class="header-cart-container">
-						<span class="the-amount"></span>
+						<span class="the-amount">2</span>
 						<i class="fas fa-shopping-cart"></i>
 						<a href="#">Cart</a>
 					</div>
