--- a/index.html
+++ b/index.html
@@ -317,10 +317,17 @@
 			<span>Newsletter</span>	
 		</h2>
 
-		<form action="">
+		<form>
 			<input type="email" name="email" id="email" placeholder="enter your email">
 			<input type="submit" class="btn btn-half" value="Sign">
 		</form>
+
+		<div class="social-media">
+			<i class="fab fa-facebook-f"></i>
+			<i class="fab fa-instagram"></i>
+			<i class="fab fa-twitter"></i>
+			<i class="fab fa-pinterest-p"></i>
+		</div>
 	</section>
 
 	<footer class="footer">
