--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 		<div class="products-grid-container">
 			<div class="products-grid-card">
 				<span class="label new">New</span>
-				<img src="#" alt="Product 1">
+				<img src="https://http2.mlstatic.com/D_NQ_NP_626989-MLB45003598155_022021-O.webp" alt="Product 1">
 				<p class="category">Category</p>
 				<h3 class="product-name">Product Name</h3>
 				<p class="product-price">R$ 124,90</p>
@@ -153,7 +153,7 @@
 
 			<div class="products-grid-card">
 				<span class="label new">New</span>
-				<img src="#" alt="Product 2">
+				<img src="https://http2.mlstatic.com/D_NQ_NP_703567-MLB49325138218_032022-O.webp" alt="Product 2">
 				<p class="category">Category</p>
 				<h3 class="product-name">Product Name</h3>
 				<p class="product-price">R$ 124,90</p>
@@ -171,7 +171,7 @@
 
 			<div class="products-grid-card">
 				<span class="label new">New</span>
-				<img src="#" alt="Product 3">
+				<img src="https://http2.mlstatic.com/D_NQ_NP_754121-CBT46435716771_062021-O.webp" alt="Product 3">
 				<p class="category">Category</p>
 				<h3 class="product-name">Product Name</h3>
 				<p class="product-price">R$ 124,90</p>
@@ -189,7 +189,7 @@
 			
 			<div class="products-grid-card">
 				<span class="label new">New</span>
-				<img src="#" alt="Product 4">
+				<img src="https://http2.mlstatic.com/D_NQ_NP_781739-MLB48923986882_012022-O.webp" alt="Product 4">
 				<p class="category">Category</p>
 				<h3 class="product-name">Product Name</h3>
 				<p class="product-price">R$ 124,90</p>
@@ -242,7 +242,7 @@
 		<div class="products-grid-container">
 			<div class="products-grid-card">
 				<span class="label hot">Hot</span>
-				<img src="#" alt="Product 5">
+				<img src="https://http2.mlstatic.com/D_NQ_NP_928419-MLB31171918952_062019-O.webp" alt="Product 5">
 				<p class="category">Category</p>
 				<h3 class="product-name">Product Name</h3>
 				<p class="product-price">R$ 124,90</p>
@@ -260,7 +260,7 @@
 
 			<div class="products-grid-card">
 				<span class="label hot">Hot</span>
-				<img src="#" alt="Product 6">
+				<img src="https://http2.mlstatic.com/D_NQ_NP_808686-MLB48495292209_122021-O.webp" alt="Product 6">
 				<p class="category">Category</p>
 				<h3 class="product-name">Product Name</h3>
 				<p class="product-price">R$ 124,90</p>
@@ -278,7 +278,7 @@
 
 			<div class="products-grid-card">
 				<span class="label hot">Hot</span>
-				<img src="#" alt="Product 7">
+				<img src="https://http2.mlstatic.com/D_NQ_NP_849275-MLB47724924740_102021-O.webp" alt="Product 7">
 				<p class="category">Category</p>
 				<h3 class="product-name">Product Name</h3>
 				<p class="product-price">R$ 124,90</p>
@@ -296,7 +296,7 @@
 
 			<div class="products-grid-card">
 				<span class="label hot">Hot</span>
-				<img src="#" alt="Product 8">
+				<img src="https://images-americanas.b2w.io/produtos/01/00/img/51983/3/51983357_1GG.jpg" alt="Product 8">
 				<p class="category">Category</p>
 				<h3 class="product-name">Product Name</h3>
 				<p class="product-price">R$ 124,90</p>
